# moirai

./: Cargo.toml  NOTES.md  flake.nix
.direnv/: flake-profile-4-link
nix/checks/: default.nix
nix/pkgs/: default.nix
nix/shell/: default.nix
src/: item.rs  main.rs
src/format/: markdown.rs  mod.rs
