[package]
name = "moirai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", default-features = false }
serde_yaml2 = { version = "0.1.3", default-features = false }
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
